--- a/src/styles/hight/vh.css
+++ b/src/styles/hight/vh.css
@@ -13,8 +13,14 @@
 .h-76vh {
   height: 76vh;
 }
+.h-75vh {
+  height: 75vh;
+}
 .h-70vh {
   height: 70vh;
+}
+.h-65vh {
+  height: 65vh;
 }
 .h-60vh {
   height: 60vh;
